--- a/about.html
+++ b/about.html
@@ -2,79 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About — Simo Security</title>
-  <meta name="description" content="About Simo Security & Consulting LLC."/>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About - Simo Security</title>
+  <meta name="description" content="About Simo Security and Consulting LLC in NYC." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
     <div class="container">
       <div class="nav">
-        <a class="brand" href="index.html">
-          <div class="mark" aria-hidden="true"></div>
-          <span>Simo Security</span>
+        <a class="brand" href="index.html" aria-label="Simo Security Home">
+          <div class="logo-icon">SS</div>
+          <div class="logo-text">
+            <strong>Simo Security</strong>
+            <small>Security and Consulting LLC - NYC</small>
+          </div>
         </a>
-
-        <nav class="links" aria-label="Primary">
+        <nav class="links" aria-label="Primary navigation">
+          <a href="index.html">Home</a>
           <a href="services.html">Services</a>
           <a href="executive-protection.html">Executive Protection</a>
           <a href="consulting.html">Consulting</a>
           <a href="transportation.html">Transportation</a>
           <a href="gallery.html">Gallery</a>
-          <a href="about.html">About</a>
-          <a href="contact.html" class="btn primary">Request Quote</a>
+          <a href="testimonials.html">Testimonials</a>
+          <a class="active" href="about.html">About</a>
+          <a class="btn primary" href="contact.html">Request Quote</a>
         </nav>
-
-        <button class="menu" id="menuBtn" aria-label="Open Menu" aria-expanded="false">☰</button>
+        <button class="menu" id="menuBtn" aria-label="Open menu" aria-expanded="false">&#9776;</button>
       </div>
     </div>
-
-    <div class="mobile" id="mobileNav" aria-label="Mobile Menu">
+    <div class="mobile" id="mobileNav" aria-label="Mobile navigation">
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="executive-protection.html">Executive Protection</a>
       <a href="consulting.html">Consulting</a>
       <a href="transportation.html">Transportation</a>
       <a href="gallery.html">Gallery</a>
       <a href="testimonials.html">Testimonials</a>
-      <a href="about.html">About</a>
+      <a class="active" href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
   </header>
 
   <section class="section">
     <div class="container">
-      <h1 class="page-title">About</h1>
-      <p class="page-sub">
-        Simo Security & Consulting LLC provides elite protection built on professionalism, discretion and planning.
-        Serving NYC and the surrounding metro area.
-      </p>
-
+      <h1 class="page-title">About Simo Security</h1>
+      <p class="page-sub">Simo Security and Consulting LLC delivers disciplined, discreet protection services for venues, executives and private clients across NYC.</p>
       <div class="grid">
-        <div class="card">
+        <article class="card">
           <h3>Our Standard</h3>
-          <p>Clean presentation, disciplined communication, and client-first operations with documented procedures.</p>
-          <div class="badges">
-            <span class="badge">Discretion</span>
-            <span class="badge">Professionalism</span>
-            <span class="badge">Accountability</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>Where We Work</h3>
-          <p>Nightlife venues, private events, corporate operations, executive clients, and secure movement.</p>
-          <div class="badges">
-            <span class="badge">NYC</span>
-            <span class="badge">Metro Area</span>
-            <span class="badge">Rapid Response</span>
-          </div>
-        </div>
+          <p>Professional presentation, structured communication and accountable execution on every assignment.</p>
+          <div class="badges"><span class="badge">Discretion</span><span class="badge">Professionalism</span><span class="badge">Accountability</span></div>
+        </article>
+        <article class="card">
+          <h3>Where We Operate</h3>
+          <p>Nightlife venues, private events, executive movements and corporate environments.</p>
+          <div class="badges"><span class="badge">NYC</span><span class="badge">Metro Area</span><span class="badge">Rapid Response</span></div>
+        </article>
       </div>
-
-      <div style="margin-top:18px">
+      <div class="actions">
         <a class="btn primary" href="contact.html">Contact Us</a>
       </div>
     </div>
@@ -82,10 +69,9 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Simo Security & Consulting LLC — NYC Metro Area</p>
+      <p>&copy; 2026 Simo Security and Consulting LLC - NYC Metro Area</p>
     </div>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
