--- a/index.html
+++ b/index.html
@@ -1,168 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simo Security — Elite Protection in NYC</title>
-  <meta name="description" content="Professional security, executive protection, consulting & secure transportation for nightlife, events and VIP clients in New York City."/>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Simo Security - Elite Protection in NYC</title>
+  <meta name="description" content="Professional security, executive protection, consulting and secure transportation for nightlife, events and VIP clients in New York City." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="nav">
+        <a class="brand" href="index.html" aria-label="Simo Security Home">
+          <div class="logo-icon">SS</div>
+          <div class="logo-text">
+            <strong>Simo Security</strong>
+            <small>Security and Consulting LLC - NYC</small>
+          </div>
+        </a>
 
-<header>
-  <div class="container">
-    <div class="nav">
-      <a class="brand" href="index.html" aria-label="Simo Security Home">
-        <div class="logo-icon">SS</div>
-        <div class="logo-text">
-          <strong>Simo Security</strong>
-          <small>Security & Consulting LLC — NYC</small>
-        </div>
-      </a>
+        <nav class="links" aria-label="Primary navigation">
+          <a class="active" href="index.html">Home</a>
+          <a href="services.html">Services</a>
+          <a href="executive-protection.html">Executive Protection</a>
+          <a href="consulting.html">Consulting</a>
+          <a href="transportation.html">Transportation</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="testimonials.html">Testimonials</a>
+          <a href="about.html">About</a>
+          <a class="btn primary" href="contact.html">Request Quote</a>
+        </nav>
 
-      <nav class="links" aria-label="Primary navigation">
-        <a class="active" href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="executive-protection.html">Executive Protection</a>
-        <a href="consulting.html">Consulting</a>
-        <a href="transportation.html">Transportation</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="about.html">About</a>
-        <a class="btn primary" href="contact.html">Request Quote</a>
-      </nav>
-
-      <button class="menu" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
+        <button class="menu" id="menuBtn" aria-label="Open menu" aria-expanded="false">&#9776;</button>
+      </div>
     </div>
-  </div>
 
-  <div class="mobile" id="mobileNav" aria-label="Mobile navigation">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="executive-protection.html">Executive Protection</a>
-    <a href="consulting.html">Consulting</a>
-    <a href="transportation.html">Transportation</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="testimonials.html">Testimonials</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</header>
+    <div class="mobile" id="mobileNav" aria-label="Mobile navigation">
+      <a class="active" href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="executive-protection.html">Executive Protection</a>
+      <a href="consulting.html">Consulting</a>
+      <a href="transportation.html">Transportation</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </header>
 
-<section class="hero">
-  <div class="container">
-    <div class="hero-content">
-      <div class="kicker"><span class="k-dot"></span> Licensed & Insured • NYC Metro Coverage • Confidential Operations</div>
+  <section class="hero">
+    <div class="container">
+      <div class="hero-content">
+        <div class="kicker"><span class="k-dot"></span> Licensed and Insured - NYC Metro Coverage - Confidential Operations</div>
+        <h1>Elite Protection.<br />Absolute Discretion.</h1>
+        <p>
+          Professional security for nightlife venues, private events and high-profile clients.
+          Built for NYC environments: planning, presence and fast response.
+        </p>
 
-      <h1>Elite Protection.<br>Absolute Discretion.</h1>
+        <div class="actions">
+          <a class="btn primary" href="contact.html">Request Confidential Quote</a>
+          <a class="btn" href="tel:+12013123509">Call (201) 312-3509</a>
+          <a class="btn" href="mailto:athierasimo@gmail.com">athierasimo@gmail.com</a>
+        </div>
 
-      <p>
-        Professional security for nightlife venues, private events and high-profile clients.
-        Built for NYC environments—planning, presence, and fast response.
-      </p>
+        <div class="stats" aria-label="Company highlights">
+          <div class="stat">Nightlife - Events - Executive</div>
+          <div class="stat">Discreet Teams</div>
+          <div class="stat">Rapid Response</div>
+          <div class="stat">NYC Metro Area</div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="section">
+    <div class="container">
+      <h2 class="page-title">Core Services</h2>
+      <p class="page-sub">Coverage options designed for NYC venues, private clients and corporate operations.</p>
+      <div class="grid">
+        <article class="card">
+          <h3>Nightlife and Venue Security</h3>
+          <p>Access control, VIP gating, crowd management and incident response for high-traffic venues.</p>
+        </article>
+        <article class="card">
+          <h3>Private Events and High Profile</h3>
+          <p>Protection for weddings, brand activations, rooftops, after-parties and private gatherings.</p>
+        </article>
+        <article class="card">
+          <h3>Executive Protection</h3>
+          <p>Close protection, advance planning and route strategy for safer movement across NYC.</p>
+        </article>
+        <article class="card">
+          <h3>Consulting and Risk Planning</h3>
+          <p>Risk assessment, SOP development and staffing strategy to reduce incidents and liability.</p>
+        </article>
+      </div>
       <div class="actions">
-        <a class="btn primary" href="contact.html">Request Confidential Quote</a>
-        <a class="btn" href="tel:+12013123509">Call (201) 312-3509</a>
-        <a class="btn" href="mailto:athierasimo@gmail.com">athierasimo@gmail.com</a>
-      </div>
-
-      <div class="stats" aria-label="Company highlights">
-        <div class="stat">Nightlife • Events • Executive</div>
-        <div class="stat">Discreet Teams</div>
-        <div class="stat">Rapid Response</div>
-        <div class="stat">NYC Metro Area</div>
+        <a class="btn primary" href="services.html">View All Services</a>
+        <a class="btn" href="contact.html">Get a Quote</a>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="section">
-  <div class="container">
-    <h2 class="page-title">Core Services</h2>
-    <p class="page-sub">Clean, modern coverage options that match NYC venue standards and VIP expectations.</p>
-
-    <div class="grid">
-      <div class="card">
-        <h3>Nightlife & Venue Security</h3>
-        <p>Access control, VIP gating, crowd management, and incident response for Manhattan & Brooklyn venues.</p>
-        <div class="badges">
-          <span class="badge">Access Control</span>
-          <span class="badge">VIP</span>
-          <span class="badge">Crowd</span>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>Private Events & High-Profile</h3>
-        <p>Bespoke protection for weddings, brand launches, rooftops, after-parties and exclusive gatherings.</p>
-        <div class="badges">
-          <span class="badge">Guest Vetting</span>
-          <span class="badge">Perimeter</span>
-          <span class="badge">Discreet</span>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>Executive Protection</h3>
-        <p>Close protection, arrivals/departures, advance planning and route strategy for safer movement.</p>
-        <div class="badges">
-          <span class="badge">EP</span>
-          <span class="badge">Advance</span>
-          <span class="badge">Routes</span>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>Consulting & Risk Planning</h3>
-        <p>Risk assessment, SOPs, staffing plans and operational strategy to reduce incidents and liability.</p>
-        <div class="badges">
-          <span class="badge">Assessment</span>
-          <span class="badge">SOPs</span>
-          <span class="badge">Training</span>
-        </div>
+  <section class="section">
+    <div class="container">
+      <h2 class="page-title">How We Work</h2>
+      <p class="page-sub">Simple process, professional execution, reliable communication.</p>
+      <div class="strip">
+        <ul>
+          <li>1) Quick Consultation</li>
+          <li>2) Coverage Plan</li>
+          <li>3) On-Site Execution</li>
+          <li>4) Reporting and Follow-Up</li>
+        </ul>
       </div>
     </div>
+  </section>
 
-    <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
-      <a class="btn primary" href="services.html">View All Services</a>
-      <a class="btn" href="contact.html">Get a Quote</a>
+  <footer>
+    <div class="container">
+      <p>&copy; 2026 Simo Security and Consulting LLC - NYC Metro Area</p>
     </div>
-  </div>
-</section>
+  </footer>
 
-<section class="section">
-  <div class="container">
-    <h2 class="page-title">How We Work</h2>
-    <p class="page-sub">Simple, professional process. You get coverage that’s organized and reliable.</p>
-
-    <div class="strip">
-      <ul>
-        <li>1) Quick Consultation</li>
-        <li>2) Coverage Plan</li>
-        <li>3) On-Site Execution</li>
-        <li>4) Reporting & Follow-Up</li>
-      </ul>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container" style="text-align:center">
-    <h2 class="page-title">Ready to Secure Your Event?</h2>
-    <p class="page-sub">Request a confidential quote today. Fast response — professional service.</p>
-    <div class="actions" style="justify-content:center">
-      <a class="btn primary" href="contact.html">Request Quote</a>
-      <a class="btn" href="tel:+12013123509">Call Now</a>
-    </div>
-  </div>
-</section>
-
-<footer>
-  <div class="container">
-    <p>© 2026 Simo Security & Consulting LLC — NYC Metro Area</p>
-  </div>
-</footer>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
