--- a/transportation.html
+++ b/transportation.html
@@ -2,41 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Transportation — Simo Security</title>
-  <meta name="description" content="Secure transportation and movement coordination in NYC."/>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Transportation - Simo Security</title>
+  <meta name="description" content="Secure transportation and movement coordination across NYC." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
     <div class="container">
       <div class="nav">
-        <a class="brand" href="index.html">
-          <div class="mark" aria-hidden="true"></div>
-          <span>Simo Security</span>
+        <a class="brand" href="index.html" aria-label="Simo Security Home">
+          <div class="logo-icon">SS</div>
+          <div class="logo-text">
+            <strong>Simo Security</strong>
+            <small>Security and Consulting LLC - NYC</small>
+          </div>
         </a>
-
-        <nav class="links" aria-label="Primary">
+        <nav class="links" aria-label="Primary navigation">
+          <a href="index.html">Home</a>
           <a href="services.html">Services</a>
           <a href="executive-protection.html">Executive Protection</a>
           <a href="consulting.html">Consulting</a>
-          <a href="transportation.html">Transportation</a>
+          <a class="active" href="transportation.html">Transportation</a>
           <a href="gallery.html">Gallery</a>
+          <a href="testimonials.html">Testimonials</a>
           <a href="about.html">About</a>
-          <a href="contact.html" class="btn primary">Request Quote</a>
+          <a class="btn primary" href="contact.html">Request Quote</a>
         </nav>
-
-        <button class="menu" id="menuBtn" aria-label="Open Menu" aria-expanded="false">☰</button>
+        <button class="menu" id="menuBtn" aria-label="Open menu" aria-expanded="false">&#9776;</button>
       </div>
     </div>
-
-    <div class="mobile" id="mobileNav" aria-label="Mobile Menu">
+    <div class="mobile" id="mobileNav" aria-label="Mobile navigation">
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="executive-protection.html">Executive Protection</a>
       <a href="consulting.html">Consulting</a>
-      <a href="transportation.html">Transportation</a>
+      <a class="active" href="transportation.html">Transportation</a>
       <a href="gallery.html">Gallery</a>
       <a href="testimonials.html">Testimonials</a>
       <a href="about.html">About</a>
@@ -46,65 +47,37 @@
 
   <section class="section">
     <div class="container">
-      <h1 class="page-title">Transportation</h1>
-      <p class="page-sub">
-        Secure movement support across NYC—coordinated arrivals, transitions, and route planning.
-      </p>
-
+      <h1 class="page-title">Secure Transportation</h1>
+      <p class="page-sub">Protected movement support across NYC with route planning, timing control and coordinated arrivals.</p>
       <div class="grid">
-        <div class="card">
-          <h3>Secure Transportation Support</h3>
-          <p>Planned pickups, controlled arrivals, and professional movement coordination.</p>
-          <div class="badges">
-            <span class="badge">Pickup</span>
-            <span class="badge">Arrival Control</span>
-            <span class="badge">Coordination</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>Venue Transitions</h3>
-          <p>Vehicle-to-venue movement support, entry path control and crowd buffers.</p>
-          <div class="badges">
-            <span class="badge">Transitions</span>
-            <span class="badge">Perimeter</span>
-            <span class="badge">VIP Entry</span>
-          </div>
-        </div>
-
-        <div class="card">
+        <article class="card">
+          <h3>Secure Pickups</h3>
+          <p>Planned pickups and controlled departure points for safer movement in dense areas.</p>
+        </article>
+        <article class="card">
+          <h3>Venue Arrivals</h3>
+          <p>Vehicle-to-venue transitions with perimeter control and principal-focused routing.</p>
+        </article>
+        <article class="card">
           <h3>Route Strategy</h3>
-          <p>Multi-stop planning, time windows, alternates, and contingency options.</p>
-          <div class="badges">
-            <span class="badge">Routes</span>
-            <span class="badge">Timing</span>
-            <span class="badge">Contingency</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>Event Logistics Support</h3>
-          <p>Traffic flow planning, staging areas and coordination with venue staff.</p>
-          <div class="badges">
-            <span class="badge">Staging</span>
-            <span class="badge">Traffic Flow</span>
-            <span class="badge">Coordination</span>
-          </div>
-        </div>
+          <p>Primary and alternate routing with timing windows and contingency planning.</p>
+        </article>
+        <article class="card">
+          <h3>Event Logistics</h3>
+          <p>Staging support, traffic flow coordination and alignment with event operations.</p>
+        </article>
       </div>
-
-      <div style="margin-top:18px">
-        <a class="btn primary" href="contact.html">Request Transport Support</a>
+      <div class="actions">
+        <a class="btn primary" href="contact.html">Request Transportation Support</a>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>© 2026 Simo Security & Consulting LLC — NYC Metro Area</p>
+      <p>&copy; 2026 Simo Security and Consulting LLC - NYC Metro Area</p>
     </div>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
