--- a/consulting.html
+++ b/consulting.html
@@ -2,40 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Consulting — Simo Security</title>
-  <meta name="description" content="Security consulting, risk assessment and operational planning in NYC."/>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Consulting - Simo Security</title>
+  <meta name="description" content="Security consulting, risk assessment and operational planning in NYC." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
     <div class="container">
       <div class="nav">
-        <a class="brand" href="index.html">
-          <div class="mark" aria-hidden="true"></div>
-          <span>Simo Security</span>
+        <a class="brand" href="index.html" aria-label="Simo Security Home">
+          <div class="logo-icon">SS</div>
+          <div class="logo-text">
+            <strong>Simo Security</strong>
+            <small>Security and Consulting LLC - NYC</small>
+          </div>
         </a>
-
-        <nav class="links" aria-label="Primary">
+        <nav class="links" aria-label="Primary navigation">
+          <a href="index.html">Home</a>
           <a href="services.html">Services</a>
           <a href="executive-protection.html">Executive Protection</a>
-          <a href="consulting.html">Consulting</a>
+          <a class="active" href="consulting.html">Consulting</a>
           <a href="transportation.html">Transportation</a>
           <a href="gallery.html">Gallery</a>
+          <a href="testimonials.html">Testimonials</a>
           <a href="about.html">About</a>
-          <a href="contact.html" class="btn primary">Request Quote</a>
+          <a class="btn primary" href="contact.html">Request Quote</a>
         </nav>
-
-        <button class="menu" id="menuBtn" aria-label="Open Menu" aria-expanded="false">☰</button>
+        <button class="menu" id="menuBtn" aria-label="Open menu" aria-expanded="false">&#9776;</button>
       </div>
     </div>
-
-    <div class="mobile" id="mobileNav" aria-label="Mobile Menu">
+    <div class="mobile" id="mobileNav" aria-label="Mobile navigation">
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="executive-protection.html">Executive Protection</a>
-      <a href="consulting.html">Consulting</a>
+      <a class="active" href="consulting.html">Consulting</a>
       <a href="transportation.html">Transportation</a>
       <a href="gallery.html">Gallery</a>
       <a href="testimonials.html">Testimonials</a>
@@ -44,69 +45,39 @@
     </div>
   </header>
 
-  <!-- PAGE -->
   <section class="section">
     <div class="container">
       <h1 class="page-title">Consulting</h1>
-      <p class="page-sub">
-        Clear recommendations, cleaner operations, fewer incidents. Consulting for venues, events, and corporate needs across NYC.
-      </p>
-
+      <p class="page-sub">Clear recommendations, cleaner operations and fewer incidents for venues, events and businesses.</p>
       <div class="grid">
-        <div class="card">
+        <article class="card">
           <h3>Risk Assessment</h3>
-          <p>Identify vulnerabilities and threats, then deliver practical mitigation steps tailored to your environment.</p>
-          <div class="badges">
-            <span class="badge">Assessment</span>
-            <span class="badge">Mitigation</span>
-            <span class="badge">Reporting</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>Operational Plans & SOPs</h3>
-          <p>Standard operating procedures, escalation paths, entry control workflows, and incident documentation.</p>
-          <div class="badges">
-            <span class="badge">SOPs</span>
-            <span class="badge">Escalation</span>
-            <span class="badge">Incident Flow</span>
-          </div>
-        </div>
-
-        <div class="card">
+          <p>Identify vulnerabilities and deliver practical mitigation steps based on your environment.</p>
+        </article>
+        <article class="card">
+          <h3>SOP Development</h3>
+          <p>Build escalation paths, access workflows and reporting standards for your team.</p>
+        </article>
+        <article class="card">
           <h3>Staffing Strategy</h3>
-          <p>Coverage planning based on layout, crowd profile, hours, and risk level—without overspending.</p>
-          <div class="badges">
-            <span class="badge">Staffing</span>
-            <span class="badge">Coverage</span>
-            <span class="badge">Venue Flow</span>
-          </div>
-        </div>
-
-        <div class="card">
+          <p>Plan headcount by layout, crowd profile, operating hours and target risk level.</p>
+        </article>
+        <article class="card">
           <h3>Training Support</h3>
-          <p>Communication standards, de-escalation, professional presence, and reporting routines for teams.</p>
-          <div class="badges">
-            <span class="badge">Training</span>
-            <span class="badge">De-escalation</span>
-            <span class="badge">Protocols</span>
-          </div>
-        </div>
+          <p>Communication standards, de-escalation techniques and documentation routines.</p>
+        </article>
       </div>
-
-      <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
+      <div class="actions">
         <a class="btn primary" href="contact.html">Request Consultation</a>
-        <a class="btn" href="mailto:athierasimo@gmail.com">Email: athierasimo@gmail.com</a>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>© 2026 Simo Security & Consulting LLC — NYC Metro Area</p>
+      <p>&copy; 2026 Simo Security and Consulting LLC - NYC Metro Area</p>
     </div>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
